--- a/bitmoto.css
+++ b/bitmoto.css
@@ -53,8 +53,8 @@
 
 #bitmoto.kia {color:#333;}
 #bitmoto.kia h1 {font-size:28px;line-height:34px;margin:8px;padding:1%;}
-#bitmoto.kia nav {width:100%;background-color:#C62233;text-align:center;font-weight:bold;border-top:3px #999 solid;font-size:20px;min-width: 420px;}
-#bitmoto.kia nav a {color:white;text-decoration:none;padding:10px 0;display:inline-block;width:23%;min-width:99px;}
+#bitmoto.kia #nav {width:100%;background-color:#C62233;text-align:center;font-weight:bold;border-top:3px #999 solid;font-size:20px;min-width: 420px;}
+#bitmoto.kia #nav a {color:white;text-decoration:none;padding:10px 0;display:inline-block;width:23%;min-width:99px;}
 #bitmoto.kia.sale .intro {background:#f0f0f0;width:95%;border-radius:4px;padding:2%;margin: 9px auto 2px}
 #bitmoto.kia.sale #vid {text-align:center;margin:auto;border-top:1px lightgray solid;padding:18px 0 0 0}
 #bitmoto.kia.sale iframe {margin:auto}
