--- a/bitmoto.css
+++ b/bitmoto.css
@@ -75,12 +75,21 @@
 #bitmoto.kia.vehicle #details {border-top: 1px solid #f0f0f0;margin: 8px auto;text-align: center;display: inline-block;width: 99%;}
 #bitmoto.kia.vehicle #details .one {padding: 8px 0;display: inline-block;width: 35%;margin: auto;vertical-align: bottom;color: #888888;}
 #bitmoto.kia.vehicle #details .two {padding: 8px 0;display: inline-block;width: 30%;margin: auto;font-size: 24px;}
+#bitmoto.kia.vehicle #details a {text-decoration:none;color:white;display:inline-block;padding:18px 0;background-color:#C62233;width:95%;margin:auto}
+#bitmoto.kia.vehicle #details .one b {font-size:44px;color:#222222}
 #bitmoto.kia.vehicle .intro {background:#f0f0f0;width:95%;border-radius:4px;padding:2%;margin: 9px auto 2px}
 #bitmoto.kia.vehicle #vid {text-align:center;margin:auto;border-top:1px lightgray solid;padding:18px 0 0 0}
 #bitmoto.kia.vehicle section {width:99%;margin:18px auto;border-top:1px lightgray solid;padding:14px 0}
 #bitmoto.kia.vehicle section div {display:inline-block;width:48%; margin: auto;vertical-align:middle}
 #bitmoto.kia.vehicle section p, #bitmoto.kia.vehicle section h2, #bitmoto.kia.vehicle section h3 {padding: 0 2%}
 #bitmoto.kia.vehicle section img {width:95%;margin:auto;padding:2%}
+#bitmoto.ford.vehicle #cta {margin:32px 0}
+#bitmoto.ford.vehicle #cta1, #bitmoto.ford.vehicle #cta2 {font-weight:bold;font-size:35px;display:inline-block;width:49%;text-align:center}
+#bitmoto.ford.vehicle #cta2 span {display:inline-block;background-color:#29548c;color:white;padding:4%;border-radius:8px}
+#bitmoto.ford.vehicle #cta1 span {display:inline-block;color:#29548c;padding:4%;border-radius:8px}
+#bitmoto.ford.vehicle #cta1 i {font-size:22px;color:#666666}
+#bitmoto.ford.vehicle #cta2 a {text-decoration:none}
+#bitmoto.ford.vehicle #cta2 span:hover {background-color: #1e88bd}
 
 
 /* Mobile Responsiveness */
