--- a/bitmoto.css
+++ b/bitmoto.css
@@ -104,15 +104,16 @@
 
 @media screen and (max-width: 480px) {
   #bitmoto {width:98%; padding:1px; margin:0}
-  #iframe {width:98% !important;}
-  #bitmoto.kia.sale #cta1, #bitmoto.kia.sale #cta2 {width: 99%;}
+  #bitmoto iframe {width:99% !important;}
+  #bitmoto.sale #cta1, #bitmoto.sale #cta2 {width: 99%;}
+  #bitmoto nav, #bitmoto #nav {min-width:320px !important; font-size: 18px;}
 
 }
 
 @media screen and (max-width: 360px) {
-  #bitmoto nav, #bitmoto #nav {min-width:320px; font-size: 18px;}
-  #bitmoto nav a, #bitmoto #nav a {width:49%;}
-  #bitmoto section div {width:99%;}
+  #bitmoto nav, #bitmoto #nav {max-width:100% !important; font-size: 17px;}
+  #bitmoto nav a, #bitmoto #nav a {width:49% !important;}
+  #bitmoto section div {width:99% !important;}
 
 }
 
