--- a/bitmoto.css
+++ b/bitmoto.css
@@ -109,6 +109,8 @@
   #bitmoto nav, #bitmoto #nav {min-width:320px !important; font-size: 18px;}
   #bitmoto #vehicle {background-image: none;max-width:100%;}
   #bitmoto #vehicle {position:relative; width:99%; top:0;right:0; left:0;}
+  #bitmoto #details .one {width:99%;}
+  #bitmoto #details .two {width:49%;}
 
 }
 
