--- a/bitmoto.css
+++ b/bitmoto.css
@@ -108,7 +108,7 @@
   #bitmoto.sale #cta1, #bitmoto.sale #cta2 {width: 99%;}
   #bitmoto nav, #bitmoto #nav {min-width:320px !important; font-size: 18px;}
   #bitmoto #vehicle {background-image: none !important;max-width:100% !important;}
-  #bitmoto #vehicle {position:relative !important; width:99% !important; top:0;right:0; left:0;}
+  #bitmoto #vehicle div {position:relative !important; width:99% !important; top:0 !important;right:0 !important; left:0;}
   #bitmoto #details .one {width:99%;}
   #bitmoto #details .two {width:49%;}
 
