--- a/bitmoto.css
+++ b/bitmoto.css
@@ -105,7 +105,7 @@
 @media screen and (max-width: 480px) {
   #bitmoto {width:98%; padding:1px; margin:0}
   #bitmoto iframe {width:99% !important;}
-  #bitmoto.sale #cta1, #bitmoto.sale #cta2 {width: 99%;}
+  #bitmoto.sale #cta1, #bitmoto.sale #cta2 {width: 99% !important;}
   #bitmoto nav, #bitmoto #nav {min-width:320px !important; font-size: 18px;}
   #bitmoto #vehicle {background-image: none !important;max-width:100% !important;}
   #bitmoto #vehicle div {position:relative !important; width:99% !important; top:0 !important;right:0 !important; left:0;}
