--- a/bitmoto.css
+++ b/bitmoto.css
@@ -113,8 +113,8 @@
   #bitmoto #details .one {width:99% !important;}
   #bitmoto #details .one strong {font-size:22px;}
   #bitmoto #details .two {width:49% !important;}
-  #bitmoto #vehicle div:nth-of-type(3) {font-size:22px;}
-  #bitmoto #vehicle div:nth-of-type(3) strong {font-size:32px;}
+  #bitmoto #vehicle div:nth-of-type(3) {font-size:22px !important;}
+  #bitmoto #vehicle div:nth-of-type(3) strong {font-size:34px !important;}
 
 }
 
