--- a/bitmoto.css
+++ b/bitmoto.css
@@ -1,9 +1,19 @@
 /* Devins Custom CSS for Bitmoto */
 
-/* General Custom Pages */
+/* All Pages */
+
+#bitmoto {background-color:white;max-width:950px;margin: 0 auto 8px;padding:0 0 4px 0; color: #333;}
+#bitmoto img {max-width:100%}
+#bitmoto .highlight {width:95%;margin:18px auto;background-color:#f0f0f0;padding:14px 2%;color:#333;text-transform: none;font-weight: normal;}
+#bitmoto-signature {font-family:cursive;font-size:16px;color:#444;padding:4px}
+#bitmoto-signature a {font-family:roboto,arial;text-decoration:none;color:#333;font-size:12px}
+#bitmoto-signature a span {font-family:cursive;font-size:16px;color:#444;padding:4px}
+
+
+/* Sales Pages */
 
 #bitmoto.sale .intro {background: #f0f0f0;width: 95%;border-radius: 4px;padding: 2%;margin: 9px auto 2px;color:#555;}
-#bitmoto.sale section div {display: inline-block;width: 48%;margin: auto;vertical-align: middle;}
+#bitmoto.sale section div {display: inline-block;width: 46%;margin: auto;vertical-align: middle; padding:1%;}
 #bitmoto.sale section div img {width:99%;}
 #bitmoto.sale #shop {text-decoration: none;color: white;display: block;padding: 18px 0;margin: auto;text-align: center;font-size: 22px;font-weight: bold;}
 #bitmoto.sale #vid {text-align: center;margin: auto;border-top: 1px lightgray solid;padding: 18px 0 0 0;}
@@ -15,16 +25,14 @@
 #bitmoto iframe {margin:auto;}
 
 
+/* Ford Pages */
 
-#bitmoto {background-color:white;max-width:950px;margin: 0 auto 8px;padding:0 0 4px 0}
-#bitmoto img {max-width:100%}
-#bitmoto .highlight {width:95%;margin:18px auto;background-color:#f0f0f0;padding:14px 2%;color:#333;text-transform: none;font-weight: normal;}
+#bitmoto.ford #cta a {background: #29548c;}
+#bitmoto.ford #shop {background: #2d96cd;}
 
-#bitmoto-signature {font-family:cursive;font-size:16px;color:#444;padding:4px}
-#bitmoto-signature a {font-family:roboto,arial;text-decoration:none;color:#333;font-size:12px}
-#bitmoto-signature a span {font-family:cursive;font-size:16px;color:#444;padding:4px}
 
-#bitmoto.fiat {color:#333;}
+/* Fiat Sales Pages */
+
 #bitmoto.fiat nav {width:100%;background-color:#941711;text-align:center;font-weight:bold;border-top:3px #999 solid;font-size:20px;min-width: 420px;}
 #bitmoto.fiat nav a {color:white;text-decoration:none;padding:10px 0;display:inline-block;width:23%;min-width:99px;}
 #bitmoto.fiat.sales-event .intro {background:#f0f0f0;width:95%;border-radius:4px;padding:2%;margin: 9px auto 2px}
@@ -43,7 +51,7 @@
 #bitmoto.fiat.sales-event #cta2 a {text-decoration:none}
 #bitmoto.fiat.sales-event #cta2 span:hover {background-color:#1e88bd}
 
-#bitmoto.chevrolet {color:#333;}
+
 #bitmoto.chevrolet h1 {font-size:28px;line-height:34px;margin:8px;padding:1%;}
 #bitmoto.chevrolet nav {width:100%;background-color:#222;text-align:center;font-weight:bold;border-top:3px #999 solid;font-size:20px;min-width: 420px;}
 #bitmoto.chevrolet nav a {color:white;text-decoration:none;padding:10px 0;display:inline-block;width:23%;min-width:99px;}
@@ -63,7 +71,7 @@
 #bitmoto.chevrolet.sale #cta2 a {text-decoration:none}
 #bitmoto.chevrolet.sale #cta2 span:hover {background-color:#1e88bd}
 
-#bitmoto.kia {color:#333;}
+
 #bitmoto.kia h1 {font-size:28px;line-height:34px;margin:8px;padding:1%;}
 #bitmoto.kia #disclaimer {color:gray;font-size:10px;margin:18px 0;border-top:1px solid #f0f0f0}
 #bitmoto.kia #nav {width:100%;background-color:#C62233;text-align:center;font-weight:bold;border-top:3px #999 solid;font-size:20px;min-width: 420px;}
