--- a/bitmoto.css
+++ b/bitmoto.css
@@ -20,7 +20,7 @@
 #bitmoto.sale #cta {margin: 32px 0;border-top: 1px solid lightgray;padding: 18px 0 8px;}
 #bitmoto.sale #cta1 {font-weight: bold;font-size: 34px;display: inline-block;width: 48%;text-align: center;}
 #bitmoto.sale #cta2 {font-weight: bold;font-size: 34px;display: inline-block;width: 48%;text-align: center;}
-#bitmoto.sale #cta a {display: inline-block;color: white;padding: 4%;border-radius: 8px;}
+#bitmoto.sale #cta a {display: inline-block;color: white;padding: 4%;border-radius: 8px; text-decoration:none;}
 #bitmoto #disclaimer {color: gray;font-size: 10px;margin: 18px 0;border-top: 1px solid #f0f0f0;}
 #bitmoto iframe {margin:auto;}
 
