--- a/bitmoto.css
+++ b/bitmoto.css
@@ -67,7 +67,7 @@
 #bitmoto.chevrolet.sale #shop:hover {background-color:#e8c15f;}
 #bitmoto.chevrolet.sale .shop:hover {background-color:#e8c15f;}
 #bitmoto.chevrolet #cta {margin:32px 0;border-top:1px solid lightgray;padding:18px 0 8px}
-#bitmoto.chevrolet #cta1,#bitmoto.chevrolet.sale #cta2 {font-weight:bold;font-size:34px;display:inline-block;width:48%;text-align:center}
+#bitmoto.chevrolet #cta1, #bitmoto.chevrolet #cta2 {font-weight:bold;font-size:34px;display:inline-block;width:48%;text-align:center}
 #bitmoto.chevrolet #cta2 span {display:inline-block;background-color:#29548c;color:white;padding:4%;border-radius:8px}
 #bitmoto.chevrolet #cta1 span {display:inline-block;color:#29548c;padding:4%;border-radius:8px}
 #bitmoto.chevrolet #cta2 a {text-decoration:none}
