--- a/bitmoto.css
+++ b/bitmoto.css
@@ -12,6 +12,7 @@
 #bitmoto #vid {text-align: center;margin: auto;border-top: 1px lightgray solid;padding: 18px 0 0 0;}
 #bitmoto #disclaimer {color: gray;font-size: 10px;margin: 18px 0;border-top: 1px solid #f0f0f0; padding:2%}
 #bitmoto iframe {margin:auto;}
+#bitmoto nav {width:100%;text-align: center;font-weight: bold;border-top: 3px #999 solid;font-size: 20px;min-width: 420px;}
 
 
 /* Sales Pages */
@@ -111,6 +112,11 @@
 #bitmoto.kia.vehicle #cta1 i {font-size:22px;color:#666666}
 #bitmoto.kia.vehicle #cta2 a {text-decoration:none}
 #bitmoto.kia.vehicle #cta2 span:hover {background-color: #1e88bd}
+
+/* Lincoln */
+
+#bitmoto nav, #bitmoto #shop, #bitmoto .shop, #bitmoto #cta2 {background:#222;}
+
 
 
 /* Mobile Responsiveness */
