--- a/bitmoto.css
+++ b/bitmoto.css
@@ -13,6 +13,7 @@
 #bitmoto #disclaimer {color: gray;font-size: 10px;margin: 18px 0;border-top: 1px solid #f0f0f0; padding:2%}
 #bitmoto iframe {margin:auto;}
 #bitmoto nav {width:100%;text-align: center;font-weight: bold;border-top: 3px #999 solid;font-size: 20px;min-width: 420px;}
+#bitmoto nav a {text-decoration: none;padding: 10px 0;display: inline-block;width: 23%;min-width: 99px;}
 
 
 /* Sales Pages */
